# tshipate

./: .gitignore  meson.build
source/: assemble.cpp  assemble.hpp  bit_pattern.hpp  chip8.cpp  chip8.hpp  common.hpp  defines.hpp  digits.hpp  disassemble.hpp  includes.hpp  instruction.cpp  instruction.hpp  main.cpp  meson.build  nibble_pattern.hpp  types.hpp  util.cpp  util.hpp
